# TLS_to_FDS

./: .gitignore  LICENSE  README.md  build_exe.py  config.yaml  constants.py  gui.py  main.py  mainwindow.ui  mainwindow.ui.autosave  mesh_visualizer.html  models.py  pyproject.toml  requirements.txt  run_tls_to_fds.py  utils.py
.github/workflows/: build-standalone.yml  check-style.yml  ci.yml  tests.yml
data/: test_trunks.laz
examples/: example_fds_file.fds
mainwindow/: main.py  pyproject.toml
mainwindow/mainwindow/: mainwindow.ui  qmldir
presets/: blank.json  boreal_forest.json  european_mixed_forest_summer.json  european_mixed_forest_winter.json  ponderosa_pine_summer.json  ponderosa_pine_winter.json
src/tls_to_fds/: constants.py  default_config.json  fds_builder.py  gui.py  io_utils.py  litter_models.py  main.py  mainwindow.ui  mesh_visualizer.html  models.py  spatial_utils.py  style.qss  wizard.py  workers.py
src/tls_to_fds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_edge_cases.py  test_imports.py  test_litter_models.py
