[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tls_to_fds"
version = "2.0.0"
description = "A visual pipeline to convert Terrestrial Laser Scanning (TLS) point clouds into Fire Dynamics Simulator (FDS) voxel domains."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "laspy",
    "lazrs",
    "PySide6",
    "dendroptimized"
]

[project.scripts]
tls-to-fds = "tls_to_fds.gui:TLS_to_FDS_GUI"
