[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tls_to_fds"
dynamic = ["version"]
description = "A visual pipeline to convert Terrestrial Laser Scanning (TLS) point clouds into Fire Dynamics Simulator (FDS) voxel domains."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "laspy",
    "lazrs",
    "PySide6",
    "dendroptimized"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[project.scripts]
tls-to-fds = "tls_to_fds.gui:TLS_to_FDS_GUI"

[tool.setuptools.dynamic]
version = {attr = "tls_to_fds.__version__"}
